--- a/od_client_side_only/build.gradle
+++ b/od_client_side_only/build.gradle
@@ -6,10 +6,14 @@ version = '1.0'
 repositories {
     mavenLocal()
     mavenCentral()
+	maven {
+		url 'http://dl.bintray.com/svene/mavenrepo'
+	}
 }
 
 dependencies {
-	compile 'org.open-dolphin:javafxclient-extension:0.1'
-	compile 'org.open-dolphin:javafxcombined-extension:0.1'
+	compile 'org.open-dolphin-extension:client-extension:0.3'
+	compile 'org.open-dolphin-extension:javafxclient-extension:0.3'
+	compile 'org.open-dolphin-extension:javafxcombined-extension:0.3'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
