--- a/od_web_03_remote_mode_jee/build.gradle
+++ b/od_web_03_remote_mode_jee/build.gradle
@@ -1,17 +1,23 @@
-apply plugin: 'java'
-apply plugin: 'groovy'
-apply plugin: 'war'
-apply plugin: 'maven'
 
-group = 'org.open-dolphin'
-version = '1.0-SNAPSHOT'
+subprojects {
+	apply plugin: 'java'
+	apply plugin: 'groovy'
+	apply plugin: 'war'
+	apply plugin: 'maven'
 
+	group = 'org.open-dolphin'
+	version = '1.0-SNAPSHOT'
 
-repositories {
-	mavenCentral()
+	repositories {
+		mavenCentral()
+	}
+	dependencies {
+		compile 'org.open-dolphin:dolphin-server:0.9'
+		providedCompile 'javax:javaee-api:7.0'
+		testCompile 'junit:junit:4.11'
+	}
+
+	sourceCompatibility = 1.7
+
 }
-dependencies {
-	compile 'org.open-dolphin:dolphin-server:0.9'
-	providedCompile 'javax:javaee-api:7.0'
-	testCompile 'junit:junit:4.11'
-}
+
