introduced persistence with JPA, EclipseLink, DerbyDB

--- a/od_web_03_remote_mode_jee/webdemo/build.gradle
+++ b/od_web_03_remote_mode_jee/webdemo/build.gradle
@@ -1,3 +1,5 @@
 dependencies {
 	compile project(':opendolphinjee')
+	compile 'org.eclipse.persistence:eclipselink:2.5.1'
+	compile 'org.apache.derby:derby:10.8.2.2'
 }
