--- a/od_client_side_only/build.gradle
+++ b/od_client_side_only/build.gradle
@@ -12,8 +12,8 @@ repositories {
 }
 
 dependencies {
-	compile 'org.open-dolphin-extension:client-extension:0.3'
-	compile 'org.open-dolphin-extension:javafxclient-extension:0.3'
-	compile 'org.open-dolphin-extension:javafxcombined-extension:0.3'
+	compile 'org.open-dolphin-extension:client-extension:0.4-SNAPSHOT'
+	compile 'org.open-dolphin-extension:javafxclient-extension:0.4-SNAPSHOT'
+	compile 'org.open-dolphin-extension:javafxcombined-extension:0.4-SNAPSHOT'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
