--- a/od_master_detail/build.gradle
+++ b/od_master_detail/build.gradle
@@ -18,3 +18,23 @@ dependencies {
     testCompile 'org.open-dolphin-extension:javafxcombined-extension:0.4-SNAPSHOT'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
+
+subprojects {
+    apply plugin: 'java'
+
+    sourceCompatibility = 1.8
+    version = '1.0'
+
+    repositories {
+        mavenCentral()
+        mavenLocal()
+        maven {
+            url 'http://dl.bintray.com/svene/mavenrepo'
+        }
+    }
+
+    dependencies {
+        testCompile group: 'junit', name: 'junit', version: '4.11'
+    }
+
+}
