--- a/od_master_detail/settings.gradle
+++ b/od_master_detail/settings.gradle
@@ -3,4 +3,4 @@ rootProject.name = 'od_master_detail'
 include 'client'
 include 'server'
 include 'shared'
-include 'development'
+include 'combined'
