master detail pattern: moved use case independent code to open-dolphin-extension  project

--- a/od_master_detail/client/build.gradle
+++ b/od_master_detail/client/build.gradle
@@ -4,5 +4,6 @@ apply plugin: 'java'
 dependencies {
 	compile project(':shared')
 	compile 'org.open-dolphin:dolphin-client:0.11'
+	compile 'org.open-dolphin-extension:shared-extension:0.4-SNAPSHOT'
 
 }
