--- a/od_master_detail/build.gradle
+++ b/od_master_detail/build.gradle
@@ -1,3 +1,5 @@
+apply plugin: 'base'
+
 subprojects {
     apply plugin: 'java'
 
@@ -5,8 +7,8 @@ subprojects {
     version = '1.0'
 
     repositories {
-        mavenCentral()
         mavenLocal()
+        mavenCentral()
         maven {
             url 'http://dl.bintray.com/svene/mavenrepo'
         }
