--- a/od_master_detail/server/build.gradle
+++ b/od_master_detail/server/build.gradle
@@ -4,5 +4,6 @@ apply plugin: 'java'
 dependencies {
 	compile project(':shared')
 	compile 'org.open-dolphin:dolphin-server:0.11'
+	compile 'org.open-dolphin-extension:server-extension:0.4-SNAPSHOT'
 
 }
