--- a/od_master_detail/client/build.gradle
+++ b/od_master_detail/client/build.gradle
@@ -3,7 +3,6 @@ apply plugin: 'java'
 
 dependencies {
 	compile project(':shared')
-	compile 'org.open-dolphin:dolphin-client:0.11'
-	compile 'org.open-dolphin-extension:shared-extension:0.4-SNAPSHOT'
+	compile 'org.open-dolphin-extension:client-extension:0.4-SNAPSHOT'
 
 }
