moved Item classes to od_example_pms library and included that as dependency

--- a/od_master_detail/client/build.gradle
+++ b/od_master_detail/client/build.gradle
@@ -4,5 +4,6 @@ apply plugin: 'java'
 dependencies {
 	compile project(':shared')
 	compile 'org.open-dolphin-extension:client-extension:0.4-SNAPSHOT'
+	compile 'org.open-dolphin:od-example-pms-client:0.1-SNAPSHOT'
 
 }
