renamed module folders again, otherwise the modules for maven get the names of the folders and not the desired ones

--- a/od_example_pms/od-example-pms-client/build.gradle
+++ b/od_example_pms/od-example-pms-client/build.gradle
@@ -1,7 +1,5 @@
 
 dependencies {
-	compile project(':shared')
+	compile project(':od-example-pms-shared')
 	compile 'org.open-dolphin-extension:client-extension:0.4-SNAPSHOT'
 }
-
-project.archivesBaseName = 'od-example-pms-client'
