--- a/od_example_pms/od-example-pms-server/build.gradle
+++ b/od_example_pms/od-example-pms-server/build.gradle
@@ -1,8 +1,6 @@
 
 dependencies {
-	compile project(':shared')
+	compile project(':od-example-pms-shared')
 	compile 'org.open-dolphin-extension:server-extension:0.4-SNAPSHOT'
 
 }
-
-project.archivesBaseName = 'od-example-pms-server'
