--- a/od_master_detail_fx/client/build.gradle
+++ b/od_master_detail_fx/client/build.gradle
@@ -22,6 +22,7 @@ dependencies {
     compile 'org.svenehrke:javafx_extensions:0.1-SNAPSHOT'
     compile "org.open-dolphin:dolphin-client-javafx:$dolphinVersion"
     compile 'org.open-dolphin:od-example-pms-client:0.1-SNAPSHOT'
+    compile 'org.open-dolphin-extension:javafxclient-extension:0.4-SNAPSHOT'
     compile 'org.open-dolphin-extension:client-extension:0.4-SNAPSHOT'
     compile "org.open-dolphin:dolphin-client:${dolphinVersion}"
 }
