initial files for 'od_simple_js_webjar'

--- a/od_simple_js_webjar/webapp/build.gradle
+++ b/od_simple_js_webjar/webapp/build.gradle
@@ -24,6 +24,7 @@ configurations {
 dependencies {
     compile project(':server')
     compile project(':shared')
+    compile 'org.webjars:bootstrap:3.3.1'
     compile 'org.open-dolphin:open-dolphin-client-javascript:0.12.0B2'
 }
 
