using version 0.12.0B2 of 'opendolphin.js'

--- a/od_simple_js/webapp/build.gradle
+++ b/od_simple_js/webapp/build.gradle
@@ -53,4 +53,5 @@ project.afterEvaluate {
 	// do to how the gretty plugin is implemented. Therefore it is done in this 'project.afterEvaluate':
 
 	[appRun, appRunWar, war]*.dependsOn fetchWebappArtifacts
+  clean.dependsOn cleanFetchWebappArtifacts
 }
