--- a/od_webonly_errorhandling/server/gradle.properties
+++ b/od_webonly_errorhandling/server/gradle.properties
@@ -1,6 +1,7 @@
 group = com.mycompany
 version = 1.0.0-SNAPSHOT
 
-dolphinVersion=0.11
+#dolphinVersion=1.0-RC2-SNAPSHOT
+dolphinVersion=1.0-RC1
 groovyAllVersion=2.4.1
 
