upgrade to OD 1.0-RC2B3 and gradle 2.6

--- a/od_simple_js_webjar/webapp/build.gradle
+++ b/od_simple_js_webjar/webapp/build.gradle
@@ -24,7 +24,7 @@ dependencies {
     compile project(':server')
     compile project(':shared')
     compile 'org.webjars:bootstrap:3.3.1'
-    compile 'org.open-dolphin:client-javascript:0.12.0B2'
+    compile 'org.open-dolphin:client-javascript:1.0-RC2B3'
 }
 
 war {
