using latest version of OpenDolphinJS as webjar

--- a/od_angular_js/webapp/build.gradle
+++ b/od_angular_js/webapp/build.gradle
@@ -14,14 +14,6 @@ repositories {
     mavenCentral()
     mavenLocal()
     maven { url 'http://dl.bintray.com/opendolphin/mavenrepo' }
-
-	ivy {
-		name 'OpenDolphinJS'
-		url 'http://dl.bintray.com/opendolphin/resources/'
-		layout 'pattern', {
-			artifact '[module]-[revision](.[classifier]).[ext]'
-		}
-	}
 }
 
 configurations {
@@ -34,12 +26,7 @@ dependencies {
     compile 'org.webjars:bootstrap:3.3.1'
     compile 'org.webjars:angularjs:1.2.21'
     compile 'org.open-dolphin:open-dolphin-ng:0.12.0B1'
-    opendolphinjs group: 'opendolphin', name: 'opendolphin', version: "$dolphinJS_version", ext: 'js'
-}
-
-task fetchWebappArtifacts(type: Copy) {
-	from configurations.opendolphinjs
-	into "$webAppDir/generated/js/"
+    compile 'org.open-dolphin:client-javascript:1.0-RC2B3'
 }
 
 war {
@@ -50,12 +37,4 @@ gretty {
   contextPath = '/appContext'
   //port = 8081
   scanInterval = 2
-}
-
-project.afterEvaluate {
-	// Let gretty-tasks depend on 'fetchWebappArtifacts'. Note: this cannot be done with:
-	//  tasks.findAll { task -> ['appRun', 'appRunWar', 'war'].contains(task.name) }*.dependsOn fetchWebappArtifacts
-	// do to how the gretty plugin is implemented. Therefore it is done in this 'project.afterEvaluate':
-
-	[appRun, appRunWar, war]*.dependsOn fetchWebappArtifacts
 }
