--- a/od_webonly_errorhandling/webapp/build.gradle
+++ b/od_webonly_errorhandling/webapp/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     compile project(':server')
     compile project(':shared')
     compile 'org.webjars:bootstrap:3.3.1'
+    compile 'org.open-dolphin:client-javascript:1.0-RC2B3'
 }
 
 war {
