--- a/od_session_keepalive/webapp/build.gradle
+++ b/od_session_keepalive/webapp/build.gradle
@@ -15,14 +15,11 @@ repositories {
     mavenLocal()
 }
 
-configurations {
-	opendolphinjs
-}
-
 dependencies {
     compile project(':server')
     compile project(':shared')
     compile 'org.webjars:bootstrap:3.3.1'
+    compile 'org.open-dolphin:client-javascript:1.0-RC2B3'
 }
 
 war {
