--- a/od_angular_js/webapp/build.gradle
+++ b/od_angular_js/webapp/build.gradle
@@ -25,7 +25,7 @@ dependencies {
     compile project(':shared')
     compile 'org.webjars:bootstrap:3.3.1'
     compile 'org.webjars:angularjs:1.2.21'
-    compile 'org.open-dolphin:open-dolphin-ng:0.12.0B1'
+    compile 'org.open-dolphin:open-dolphin-ng:1.0-RC2B3'
     compile 'org.open-dolphin:client-javascript:1.0-RC2B3'
 }
 
